--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>YoBackbone</title>
+        <title>Yandex Test</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -20,28 +20,7 @@
                     <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <div class="container">
-            <div class="header">
-                <ul class="nav nav-pills pull-right">
-                    <li class="active"><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
-                <h3 class="text-muted">YoBackbone</h3>
-            </div>
             <div id="app"></div>
-            <!--             <div class="row text-left">
-                                <div class="col-md-offset-4">
-                                        <h2>Now Try,</h2>
-                                        <h4><b>yo backbone:router</b> &lt;router&gt;</h4>
-                                        <h4><b>yo backbone:collection</b> &lt;collection&gt;</h4>
-                                        <h4><b>yo backbone:model </b> &lt;model&gt;</h4>
-                                        <h4><b>yo backbone:view </b> &lt;view&gt;</h4>
-                                </div>
-                        </div>
-            -->
-            <div class="footer">
-                <p>&#x2665; from the Yeoman team</p>
-            </div>
         </div>
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
