--- a/app/index.html
+++ b/app/index.html
@@ -11,8 +11,8 @@
         <link rel="stylesheet" href="styles/main.css">
         <link rel="stylesheet" href="styles/less.css">
         <!-- endbuild -->
-        <!-- build:js scripts/vendor/modernizr.js -->
-        <script src="bower_components/modernizr/modernizr.js"></script>
+        <!-- nobuild:js scripts/vendor/modernizr.js -->
+        <!-- <script src="bower_components/modernizr/modernizr.js"></script> -->
         <!-- endbuild -->
     </head>
     <body>
